[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/levels/Level.gd" type="Script" id=1]
[ext_resource path="res://src/actors/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Deco/line_effect.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/Backgrounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/levels/WorldEnvironment.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tilesets/cyber-tiles.png" type="Texture" id=6]
[ext_resource path="res://src/Deco/Lamp.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Deco/LineTrail.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/squares/Glow_3/5x20_magenta.png" type="Texture" id=9]
[ext_resource path="res://assets/squares/LargeShapes/buttons/circle_button.png" type="Texture" id=10]
[ext_resource path="res://src/levels/touch_button.gd" type="Script" id=11]
[ext_resource path="res://src/actors/PlayerArea.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/gameImages/splash2.png" type="Texture" id=13]
[ext_resource path="res://src/levels/splashscreen.gd" type="Script" id=14]
[ext_resource path="res://assets/squares/LargeShapes/buttons/rect_button.png" type="Texture" id=15]
[ext_resource path="res://src/levels/alerts.gd" type="Script" id=16]
[ext_resource path="res://src/Deco/BarElement.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/levels/InputEventManager.gd" type="Script" id=18]

[sub_resource type="CanvasItemMaterial" id=1]
render_priority = 10
blend_mode = 3

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=5]
0/name = "cyber-tiles.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "cyber-tiles.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "cyber-tiles.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 4 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.49789, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.996078, 1, 1, 1, 0.988312, 0.996094, 0.996094, 1 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.49789, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.992157, 0.984314, 0.984314, 1, 1, 1, 1, 1 )

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 50, 15 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 50, 15 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
enemy = ExtResource( 2 )
LineEffectNode = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 4 )]
visible = false
material = SubResource( 1 )
position = Vector2( 1.92239, 1.95482 )
scale = Vector2( 1.06401, 1.06247 )
z_index = -1000

[node name="enemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="lineEffectContainer" type="Node" parent="."]

[node name="worldArea" type="Node" parent="."]

[node name="WorldEnvironment" parent="." instance=ExtResource( 5 )]
pause_mode = 1

[node name="TileMap" type="TileMap" parent="."]
material = SubResource( 2 )
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
collision_layer = 32
collision_mask = 7
format = 1

[node name="Light2D" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 564.037, 263.609 )
rotation = -3.14075
scale = Vector2( 10.8796, 8.28082 )
energy = 1.18
shadow_buffer_size = 128

[node name="LineTrailPlayerOne" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 0 )
scale = Vector2( 1, 1 )
z_index = -1
points = PoolVector2Array( 371.102, 388.564 )
gradient = SubResource( 6 )
sharp_limit = 10.0

[node name="LineTrailPlayerTwo" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 0 )
scale = Vector2( 1, 1 )
z_index = -1
points = PoolVector2Array( 889.337, 388.564 )
gradient = SubResource( 7 )
texture = ExtResource( 9 )
sharp_limit = 10.0

[node name="Touch" type="Node2D" parent="."]
editor/display_folded = true

[node name="touchMode" type="CanvasLayer" parent="Touch"]

[node name="special_0" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 3.34518, 444.832 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_0"
visibility_mode = 1
script = ExtResource( 11 )

[node name="special_1" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 76.6903, 462.381 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_1"
visibility_mode = 1
script = ExtResource( 11 )

[node name="special_2" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 141.186, 503.328 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_2"
script = ExtResource( 11 )

[node name="special_3" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 201.115, 553.274 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_3"
script = ExtResource( 11 )

[node name="special_4" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 240.901, 619.487 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_4"
script = ExtResource( 11 )

[node name="special_5" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 256.117, 692.388 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_5"
script = ExtResource( 11 )

[node name="special_10" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 175.162, 689.858 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_feature_8"
script = ExtResource( 11 )

[node name="special_11" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 139.744, 616.493 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_feature_7"
script = ExtResource( 11 )

[node name="special_12" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 81.5579, 558.306 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_dot"
script = ExtResource( 11 )

[node name="special_13" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 8.19238, 530.478 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "Q"
script = ExtResource( 11 )

[node name="special_14" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.027451, 0.921569, 0.988235, 1 )
position = Vector2( 58.7893, 672.149 )
scale = Vector2( 1.08644, 1.08644 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_5"
script = ExtResource( 11 )

[node name="special_6" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1039.23, 688.624 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_6"
script = ExtResource( 11 )

[node name="special_7" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1051.28, 612.708 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_7"
script = ExtResource( 11 )

[node name="special_8" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1085.54, 538.26 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_8"
script = ExtResource( 11 )

[node name="special_9" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1133.27, 472.942 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_9"
script = ExtResource( 11 )

[node name="special_plus" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1202.41, 435.828 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_plus"
script = ExtResource( 11 )

[node name="special_minus" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1286.11, 414.515 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_minus"
script = ExtResource( 11 )

[node name="function_1" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1124.49, 682.237 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_sub"
script = ExtResource( 11 )

[node name="function_2" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1138.06, 599.64 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_add"
script = ExtResource( 11 )

[node name="function_3" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1196.05, 529.253 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_control_mode"
script = ExtResource( 11 )

[node name="function_4" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1282.41, 495.942 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
action = "player_special_astrix"
script = ExtResource( 11 )

[node name="function_5" type="TouchScreenButton" parent="Touch/touchMode"]
modulate = Color( 0.992157, 0.0156863, 0.701961, 1 )
position = Vector2( 1267.93, 664.172 )
scale = Vector2( 1.04043, 1.04042 )
normal = ExtResource( 10 )
shape = SubResource( 8 )
passby_press = true
script = ExtResource( 11 )

[node name="player" parent="." instance=ExtResource( 12 )]
position = Vector2( 340, 384 )
rotation = 0.0
playerColor = Color( 0, 1, 1, 0.784314 )

[node name="player2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1024, 384 )
rotation = 3.14159
isReverse = true
playerColor = Color( 0.988235, 0.278431, 0.988235, 0.784314 )
playerNumber = 2

[node name="splashscreen" type="TextureRect" parent="."]
texture = ExtResource( 13 )
expand = true
script = ExtResource( 14 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="touch" type="TouchScreenButton" parent="HUD"]
position = Vector2( 1190.31, 9.35625 )
scale = Vector2( 0.745963, 1 )
normal = ExtResource( 15 )
shape = SubResource( 9 )
action = "touch_toggle"

[node name="Label" type="Label" parent="HUD/touch"]
margin_left = 8.23376
margin_top = 12.1432
margin_right = 86.2338
margin_bottom = 26.1432
rect_scale = Vector2( 1.2, 1 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TOUCH ON"

[node name="glow" type="TouchScreenButton" parent="HUD"]
position = Vector2( 1104.58, 9.35625 )
scale = Vector2( 0.761841, 1 )
normal = ExtResource( 15 )
shape = SubResource( 9 )
action = "glow_toggle"

[node name="Label" type="Label" parent="HUD/glow"]
margin_left = 9.0
margin_top = 11.0
margin_right = 80.0
margin_bottom = 25.0
rect_scale = Vector2( 1.25, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GLOW OFF"

[node name="shake" type="TouchScreenButton" parent="HUD"]
position = Vector2( 1020.55, 9.92783 )
scale = Vector2( 0.756548, 1 )
normal = ExtResource( 15 )
shape = SubResource( 9 )
action = "shake_toggle"

[node name="Label" type="Label" parent="HUD/shake"]
margin_left = 9.0
margin_top = 11.0
margin_right = 75.0
margin_bottom = 25.0
rect_scale = Vector2( 1.25, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHAKE OFF"

[node name="help" type="TouchScreenButton" parent="HUD"]
position = Vector2( 1274.97, 8.54114 )
scale = Vector2( 0.624704, 1.05134 )
normal = ExtResource( 15 )
shape = SubResource( 10 )
action = "help_screen"

[node name="Label" type="Label" parent="HUD/help"]
margin_left = 22.0969
margin_top = 12.0
margin_right = 55.0969
margin_bottom = 26.0
rect_scale = Vector2( 2, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HELP"

[node name="help2" type="TouchScreenButton" parent="HUD"]
position = Vector2( 1274.97, 49.0744 )
scale = Vector2( 0.624704, 1.05134 )
normal = ExtResource( 15 )
shape = SubResource( 10 )
action = "load_music"

[node name="Label" type="Label" parent="HUD/help2"]
margin_left = 20.0693
margin_top = 12.6024
margin_right = 53.0693
margin_bottom = 26.6024
rect_scale = Vector2( 2, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music"

[node name="save" type="TouchScreenButton" parent="HUD"]
position = Vector2( 952.4, 8.54115 )
scale = Vector2( 0.624704, 1.05134 )
normal = ExtResource( 15 )
shape = SubResource( 10 )
action = "save_track"

[node name="Label" type="Label" parent="HUD/save"]
margin_left = 24.0
margin_top = 12.0
margin_right = 56.0
margin_bottom = 26.0
rect_scale = Vector2( 2, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save"

[node name="load" type="TouchScreenButton" parent="HUD"]
position = Vector2( 868.994, 10.5509 )
scale = Vector2( 0.727056, 1.05134 )
normal = ExtResource( 15 )
shape = SubResource( 10 )
action = "load_track"

[node name="Label" type="Label" parent="HUD/load"]
margin_left = 20.6178
margin_top = 12.0
margin_right = 57.6178
margin_bottom = 26.0
rect_scale = Vector2( 2, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Load"

[node name="Player1Score" type="Label" parent="HUD"]
visible = false
margin_left = 2.0
margin_top = 24.0
margin_right = 391.0
margin_bottom = 38.0
text = "Player 1 msg:"

[node name="Player2Score" type="Label" parent="HUD"]
visible = false
margin_left = 2.0
margin_top = 44.0
margin_right = 390.0
margin_bottom = 59.0
text = "Player 2 msg:"

[node name="TotalScore" type="Label" parent="HUD"]
margin_left = 358.0
margin_top = 7.0
margin_right = 596.0
margin_bottom = 22.0
text = "Total Score:"
align = 1

[node name="TotalEnemies" type="Label" parent="HUD"]
visible = false
margin_left = 608.501
margin_top = 5.27549
margin_right = 799.501
margin_bottom = 19.2755
text = "Total Enemies:"
align = 1

[node name="NextWaveCounter" type="Label" parent="HUD"]
visible = false
margin_left = 1175.48
margin_top = 5.9975
margin_right = 1352.48
margin_bottom = 19.9975
text = "Next Wave in:"

[node name="EnemiesBacklog" type="Label" parent="HUD"]
visible = false
margin_left = 993.463
margin_top = 7.22692
margin_right = 1161.46
margin_bottom = 21.2269
text = "Enemies Backlog:"

[node name="ChildrenBacklog" type="Label" parent="HUD"]
visible = false
margin_left = 807.609
margin_top = 7.32348
margin_right = 981.609
margin_bottom = 21.3235
text = "Children Backlog:"

[node name="fps" type="Label" parent="HUD"]
margin_left = 4.23089
margin_top = 4.11544
margin_right = 121.231
margin_bottom = 19.1154
text = "FPS: "

[node name="alerts" type="Label" parent="HUD"]
margin_left = 5.0
margin_top = 23.0
margin_right = 435.0
margin_bottom = 38.0
script = ExtResource( 16 )

[node name="playerOneBar" parent="HUD" instance=ExtResource( 17 )]
visible = false
position = Vector2( 138.141, 712.64 )
scale = Vector2( 1, 3 )

[node name="playerTwoBar" parent="HUD" instance=ExtResource( 17 )]
visible = false
position = Vector2( 576.034, 720.796 )
scale = Vector2( 1, 3 )

[node name="saveFile" type="OptionButton" parent="HUD"]
margin_left = 746.01
margin_top = 17.0
margin_right = 869.01
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
text = "Save1"
flat = true
clip_text = true
align = 2
items = [ "Save1", null, false, 0, null, "Save2", null, false, 1, null, "Save3", null, false, 2, null, "Save4", null, false, 3, null, "Save5", null, false, 4, null, "Save6", null, false, 5, null, "Save7", null, false, 6, null ]
selected = 0

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 683.402, 383.68 )
current = true
smoothing_enabled = true

[node name="GameEventManager" type="Node" parent="."]
script = ExtResource( 18 )

[node name="loadSong" type="FileDialog" parent="GameEventManager"]
visible = true
margin_left = 378.929
margin_top = 104.263
margin_right = 991.929
margin_bottom = 467.263
window_title = "Open a File"
mode = 0
access = 2
current_dir = "D:/LEO/GodotProjects/PixelWave"
current_path = "D:/LEO/GodotProjects/PixelWave/"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GameEventManager"]
[connection signal="timeout" from="enemySpawnTimer" to="." method="_on_enemySpawnTimer_timeout"]
[connection signal="file_selected" from="GameEventManager/loadSong" to="GameEventManager" method="_on_loadSong_file_selected"]
[connection signal="finished" from="GameEventManager/AudioStreamPlayer" to="GameEventManager" method="_on_AudioStreamPlayer_finished"]
